--- a/scripts/bom/ace/2-services/kustomization.yaml
+++ b/scripts/bom/ace/2-services/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 #- argocd/operators/ibm-cp4i-operators.yaml
 #- argocd/operators/ibm-datapower-operator.yaml
 #- argocd/operators/ibm-eventstreams-operator.yaml
-#- argocd/operators/ibm-mq-operator.yaml
+- argocd/operators/ibm-mq-operator.yaml
 #- argocd/operators/ibm-opsdashboard-operator.yaml
 #- argocd/operators/ibm-process-mining-operator.yaml
 #- argocd/instances/ibm-process-mining-instance.yaml
@@ -23,10 +23,10 @@ resources:
 - argocd/operators/ibm-catalogs.yaml
 
 # Required for IBM MQ
-#- argocd/instances/openldap.yaml
+- argocd/instances/openldap.yaml
 # Required for IBM ACE, IBM MQ
-#- argocd/operators/cert-manager.yaml
-#- argocd/instances/cert-manager-instance.yaml
+- argocd/operators/cert-manager.yaml
+- argocd/instances/cert-manager-instance.yaml
 
 # Sealed Secrets
 - argocd/instances/sealed-secrets.yaml
